--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "upgrade:dry": "npx @strapi/upgrade latest --dry"
   },
   "dependencies": {
+    "@amicaldo/strapi-google-maps": "^2.0.2",
     "@strapi/plugin-cloud": "5.18.1",
     "@strapi/plugin-users-permissions": "5.18.1",
     "@strapi/provider-upload-aws-s3": "^5.18.1",
